fix font size being a bit too large

--- a/ui/src/open-dyslexic.css
+++ b/ui/src/open-dyslexic.css
@@ -1,5 +1,5 @@
 body,
 html {
   font-family: OpenDyslexic, sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
